--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: sontm17
+          password: Sonpro@102
 
       - name: Build and push Docker images
         run: |
