--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,14 +31,14 @@ jobs:
 
       - name: Build and push Docker images
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/udagram-api-feed:v1 ./udagram-api-feed
-          docker push ${{ secrets.DOCKER_USERNAME }}/udagram-api-feed:v1
+          docker build -t sontm17/udagram-api-feed:v1 ./udagram-api-feed
+          docker push sontm17/udagram-api-feed:v1
 
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/udagram-api-user:v1 ./udagram-api-user
-          docker push ${{ secrets.DOCKER_USERNAME }}/udagram-api-user:v1
+          docker build -t sontm17/udagram-api-user:v1 ./udagram-api-user
+          docker push sontm17/udagram-api-user:v1
 
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/udagram-frontend:v1 ./udagram-frontend
-          docker push ${{ secrets.DOCKER_USERNAME }}/udagram-frontend:v1
+          docker build -t sontm17/udagram-frontend:v1 ./udagram-frontend
+          docker push sontm17/udagram-frontend:v1
 
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/udagram-reverseproxy:v1 ./udagram-reverseproxy
-          docker push ${{ secrets.DOCKER_USERNAME }}/udagram-reverseproxy:v1
+          docker build -t sontm17/udagram-reverseproxy:v1 ./udagram-reverseproxy
+          docker push sontm17/udagram-reverseproxy:v1
