--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,28 +11,28 @@ services:
   backend-user:
     image: udagram-api-user:latest
     environment:
-      POSTGRES_USERNAME: $POSTGRES_USERNAME
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_HOST: $POSTGRES_HOST
-      AWS_REGION: $AWS_REGION
-      AWS_PROFILE: $AWS_PROFILE
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: Duongpro102
+      POSTGRES_DB: database-2
+      POSTGRES_HOST: database-2.convqdnblu3x.us-east-1.rds.amazonaws.com
+      AWS_REGION: us-east-1
+      AWS_PROFILE: default
+      AWS_BUCKET: sontran2002
+      JWT_SECRET: helloworld
       URL: "http://localhost:8100"
   backend-feed:
     image: udagram-api-feed:latest
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
-      POSTGRES_USERNAME: $POSTGRES_USERNAME
-      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_DB: $POSTGRES_DB
-      POSTGRES_HOST: $POSTGRES_HOST
-      AWS_REGION: $AWS_REGION
-      AWS_PROFILE: $AWS_PROFILE
-      AWS_BUCKET: $AWS_BUCKET
-      JWT_SECRET: $JWT_SECRET
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: Duongpro102
+      POSTGRES_DB: database-2
+      POSTGRES_HOST: database-2.convqdnblu3x.us-east-1.rds.amazonaws.com
+      AWS_REGION: us-east-1
+      AWS_PROFILE: default
+      AWS_BUCKET: sontran2002
+      JWT_SECRET: helloworld
       URL: "http://localhost:8100"
   frontend:
     image: udagram-frontend:latest
